--- a/.github/workflows/download_and_commit.yml
+++ b/.github/workflows/download_and_commit.yml
@@ -1,4 +1,4 @@
-name: Update MuMu Installer
+name: Download File and Commit
 
 on:
   workflow_dispatch: # Manually trigger the workflow
@@ -7,7 +7,7 @@ jobs:
   download_and_commit:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Grant write permissions for the GITHUB_TOKEN
+      contents: write # Grant write permissions to the GITHUB_TOKEN
 
     steps:
     - name: Checkout repository
@@ -23,6 +23,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
-        git commit -m "Add downloaded file" || echo "No changes to commit" # Avoid failing if no changes
-        git push || echo "No changes to push or push failed, check logs" # Avoid failing if nothing to push 
+        git add MuMuInstaller.exe
+        git commit -m "Add downloaded MuMuInstaller.exe" || echo "No changes to commit"
+        git push || echo "No changes to push or push failed, check logs" 
