--- a/.github/workflows/UpdateMuMu.yml
+++ b/.github/workflows/UpdateMuMu.yml
@@ -24,5 +24,5 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
-        git commit -m "Add downloaded file" || echo "No changes to commit" # Avoid failing if no changes
+        git commit -m "Auto Release of Latest MuMu Installer" || echo "No changes to commit" # Avoid failing if no changes
         git push || echo "No changes to push or push failed, check logs" # Avoid failing if nothing to push 
